# ai-reporting-v4

./: .gitignore  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml  full-stack.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  mypy.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  chat.py  query.py  roles.py
backend/app/routers/: __init__.py  chat.py  query.py  roles.py
backend/app/services/: __init__.py  chat_service.py  conversation_store.py  llm_service.py  query_processor.py  roles_service.py
backend/app/tests/: conftest.py  test_main.py
backend/app/tests/routers/: test_query.py
backend/app/tests/services/: test_llm_service.py  test_query_processor.py
backend/app/utils/: logging_utils.py
docs/: APP_FLOW.md  ARCHITECTURE.md  DEVELOPMENT_GUIDELINES.md  DEV_GUIDELINE.md  IMPLEMENTATION_PLAN.md  README.MD
docs/guidelines/: DEVELOPMENT_GUIDELINES.md
frontend/: .env  .eslintrc  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  env.json  vite-env.d.ts
frontend/src/components/Chat/: Chat.tsx
frontend/src/components/ChatInput/: ChatInput.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/QueryInput/: QueryInput.tsx  index.ts
frontend/src/components/ResultVisualization/: ResultVisualization.tsx  index.ts
frontend/src/config/: config.base.ts  config.dev.ts  config.prod.ts  index.ts
frontend/src/services/: api.ts  config.service.ts  query.service.ts
frontend/src/state/: RoleContext.tsx
frontend/src/types/: index.ts
prompts/: 01_user-role-resolution.md
