[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-reporting-v4"
version = "0.1.0"
description = "AI-powered Virtual Data Analyst"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest]
pythonpath = ["."]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term --cov-report=html:coverage/html --cov-report=xml:coverage/coverage.xml"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]
data_file = "coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"
